# Census_Quality_Monitoring_Demo

./: .gitignore  Quality_Monitoring_System_User_Flow.txt  README.md  _upload_changes.py  app.py  app.yaml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AiChat.tsx  Button.tsx  Card.tsx  CorrelationFinder.tsx  CorrelationScatter.tsx  CountyExplorer.tsx  CountyFilterBar.tsx  DataTable.tsx  DimensionExplorer.tsx  DocumentSearch.tsx  DrillDownMap.tsx  FactorExplorer.tsx  FilterPanel.tsx  GenieSearch.tsx  JourneyAlert.tsx  KPICard.tsx  LineageGraph.tsx  MiniNationalMap.tsx  ResponseHistogram.tsx  SeverityBadge.tsx  SidebarFilters.tsx  Skeleton.tsx  Sparkline.tsx  StatusBadge.tsx  Toast.tsx
frontend/src/hooks/: useWorkspaceHost.ts
scripts/: README.md  deploy_census_app.py  deploy_full_demo.py  export_source_data.py  setup_census_demo.py  train_census_risk_model.py
scripts/data/: anomaly_scores.csv  broadband_coverage.csv  county_combined.csv  document_chunks.csv  genie_examples.csv  rag_chunks.csv  rag_mappings.csv  root_cause_join.csv  state_combined.csv  tract_response_history.csv  usps_undeliverable.csv
server/: __init__.py  audit.py  auth.py  census_data.py  config.py  db.py  mock_data.py  uc_client.py
server/routes/: ai.py  anomalies.py  audit_routes.py  auth_routes.py  drilldown.py  export.py  investigations.py  snapshot.py  views.py
server/services/: __init__.py  safe_output.py
(+22 files in other folders)
